looks better but hard to tell dry docked