@@ -69,6 +69,8 @@ deploy {
 						jvmArgs.add("-Dcom.sun.management.jmxremote.ssl=false")
 						jvmArgs.add("-Dcom.sun.management.jmxremote.authenticate=false")
 						jvmArgs.add("-Djava.rmi.server.hostname=10.56.87.2")
+					} else {
+						jvmArgs.add("-XX:+UseConcMarkSweepGC")
 					}
 				}
 
